--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.2.3
 django-heroku==0.3.1
 et-xmlfile==1.1.0
 gunicorn==20.1.0
+heroku==0.1.4
 idna==2.10
 lxml==4.6.3
 mailgun==0.1.1
@@ -20,7 +21,7 @@ Pillow==8.3.1
 psycopg2==2.8.6
 pyactiveresource==1.0.1
 PyMySQL==1.0.2
-python-dateutil==2.8.1
+python-dateutil==1.5
 pytz==2021.1
 requests==2.25.1
 selenium==3.141.0
